Added some exception handling and notif modif